# go-zetasql

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  analyzer.go  analyzer_test.go  annotation_map.go  catalog.go  catalog_test.go  column.go  connection.go  constant.go  conversion.go  enum.go  error.go  function.go  go.mod  language_options.go  link.go  map.go  map_test.go  model.go  parse_resume_location.go  parser.go  parser_test.go  procedure.go  product_mode.go  sql_formatter.go  sql_formatter_test.go  status.go  table.go  table_valued_function.go  type.go  vendor.go
.github/workflows/: go.yml  release.yml
ast/: kind.go  link.go  node.go  walk.go
constant/: constant.go  value.go
internal/ccall/absl/status/: statusor.cc
internal/ccall/absl/strings/: BUILD.bazel
internal/ccall/go-absl/: absl.go
internal/ccall/go-absl/algorithm/: algorithm.go
internal/ccall/go-absl/algorithm/algorithm/: bind.cc  bind.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/algorithm/container/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/: base.go
internal/ccall/go-absl/base/atomic_hook/: bind.cc  bind.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/base/: bind.cc  bind.go  bind_linux.go  bridge.h  bridge.inc  export.inc  ext.go
internal/ccall/go-absl/base/base_internal/: bind.cc  bind.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/config/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/core_headers/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/dynamic_annotations/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/endian/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/errno_saver/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/fast_type_id/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/log_severity/: bind.cc  bind.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/malloc_internal/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  bridge.inc  export.inc
internal/ccall/go-absl/base/pretty_function/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/raw_logging_internal/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  bridge.inc  export.inc
internal/ccall/go-absl/base/scoped_set_env/: bind.cc  bind.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/base/spinlock_wait/: bind.cc  bind.go  bind_darwin.go  bind_linux.go  bridge.h  export.inc
internal/ccall/go-absl/cleanup/: cleanup.go
internal/ccall/go-absl/container/: container.go
internal/ccall/go-absl/debugging/: debugging.go
internal/ccall/go-absl/flags/: flags.go
internal/ccall/go-absl/functional/: functional.go
internal/ccall/go-absl/hash/: hash.go
internal/ccall/go-absl/memory/: memory.go
internal/ccall/go-absl/meta/: meta.go
internal/ccall/go-absl/numeric/: numeric.go
internal/ccall/go-absl/profiling/: profiling.go
internal/ccall/go-absl/random/: random.go
internal/ccall/go-absl/status/: status.go
internal/ccall/go-absl/strings/: strings.go
internal/ccall/go-absl/synchronization/: synchronization.go
internal/ccall/go-absl/time/: time.go
internal/ccall/go-absl/types/: types.go
internal/ccall/go-absl/utility/: utility.go
internal/ccall/go-boringssl/: export.inc
internal/ccall/go-farmhash/: export.inc
internal/ccall/go-icu/icu/: export.inc
internal/ccall/go-protobuf/protobuf/: export.inc
internal/ccall/go-re2/re2/: export.inc
internal/ccall/go-zetasql/: bind.cc  bind_darwin.go  bind_linux.go  bridge.h  callback_darwin.go  callback_linux.go
internal/ccall/go-zetasql/base/: base.go
internal/ccall/go-zetasql/common/: common.go
internal/ccall/icu/common/: udata.cpp
internal/ccall/zetasql/parser/: ast_enums.pb.h  bison_parser.bison.h  flex_tokenizer.flex.cc  location.hh  parse_tree_accept_methods.inc  parse_tree_decls.h
internal/ccall/zetasql/proto/: internal_error_location.pb.cc  internal_error_location.pb.h  options.pb.h
internal/ccall/zetasql/public/: annotation.pb.cc  annotation.pb.h  builtin_function.pb.cc  builtin_function.pb.h  collation.pb.cc  collation.pb.h  deprecation_warning.pb.cc  deprecation_warning.pb.h  error_location.pb.cc  function.pb.cc  function.pb.h  parse_location_range.pb.cc  simple_constant.pb.cc  simple_constant.pb.h  simple_table.pb.h  simple_value.pb.h  type.pb.h  type_annotation.pb.h  type_modifiers.pb.cc  type_modifiers.pb.h  value.pb.cc  value.pb.h
internal/ccall/zetasql/reference_impl/: evaluator_table_iterator.pb.cc
internal/ccall/zetasql/resolved_ast/: resolved_ast.h  resolved_ast.pb.h  resolved_ast_comparator.cc  resolved_ast_comparator.h  resolved_ast_deep_copy_visitor.h  resolved_ast_enums.pb.cc  resolved_node_kind.pb.cc  resolved_node_kind.pb.h  serialization.pb.cc
internal/ccall/zetasql/scripting/: script_executor_state.pb.cc  script_executor_state.pb.h  variable.pb.h
internal/cmd/generator/: bridge.yaml  config.yaml  go.mod  go.sum  import.yaml  main.go
internal/cmd/generator/pkg/: bridge.go  build_file_parser.go  config.go  generator.go  util.go
internal/cmd/generator/templates/: bind.cc.tmpl  bind.go.tmpl  bridge.h.tmpl  bridge.inc.tmpl  bridge_extern.h.tmpl  root_bind.cc.tmpl  root_bridge.h.tmpl
internal/cmd/updater/: Dockerfile  Makefile  export.sh  go.mod  go.sum  main.go
internal/helper/: bind.go  status.go
resolved_ast/: collation.go  column.go  enum.go  function.go  kind.go  link.go  node.go  walk.go
types/: annotation_map.go  catalog.go  catalog_test.go  column.go  connection.go  constant.go  conversion.go  enum.go  function.go  model.go  parse_location.go  procedure.go  product_mode.go  table.go  table_valued_function.go  type.go  value.go
(+2021 files in other folders)
